Archive2/f7/436a6c2bf50caf/output
main.cpp:15:14: error: variable or field 'PrintIt' declared void
 void PrintIt(arr[6][6]){
              ^
main.cpp:15:14: error: 'arr' was not declared in this scope
